--- a/src/app/resto/containers/order-page/order-page.component.html
+++ b/src/app/resto/containers/order-page/order-page.component.html
@@ -1,29 +1,50 @@
-<section>
-    <header></header>
-    <h1>Resto</h1>
-    <div class="container">
-        <div class="row  col-6">
-            <tr *ngFor="let data of datas" >
-             
-             <td><button class="btn btn-"><td>{{data.title}}</td></button></td>
-
-            </tr>
-
-        </div>
-    </div>
-</section>
-<div class="container mt-4 mb-4">
+<!-- <div class="container mt-4 mb-4">
     <h1 class="text-center">Customers <span class="highlight">Favourites Food</span></h1>
     <div class="row">
         <div class="col-lg-3 mt-3" *ngFor="let data of datas">
             <div class="foodbox">
                 <h1>{{data.title}}</h1>
                 <p>{{data.title}}</p>
-                <div *ngFor="let recipe of data.recipes">
-                    {{recipe.title}}
-                    <img src="{{recipe.imageUrl}}">
+                <div class="box-container" *ngFor="let recipe of data.recipes">
+                    <div class="box">
+                        <span class="price">{{recipe.price}}</span>
+                        <img src="{{recipe.imageUrl}}" class=""alt="">
+                        <h3>{{recipe.title}}</h3>
+                    </div>
+                    <a href="#" class="btn">Order Now</a>
                 </div>
         </div>
     </div>
-    <a routerLink="menu" class="viewmorebtn">view more <i class="bi bi-arrow-right"></i></a>
+</div> -->
+
+<!-- <section class="categories" id="categories ">
+    <div class="box-container" *ngFor="let data of datas">
+        <div class="box">
+            <h1>{{data.title}}</h1>
+            <div class="box" *ngFor="let recipe of data.recipes">
+                <div class="box">
+                    <span class="price">{{recipe.price}}</span>
+                    <img src="{{recipe.imageUrl}}" class=""alt="">
+                    <h3>{{recipe.title}}</h3>
+                    <a href="#" class="btn">Ajouter</a>
+                </div>
+                
+            </div>
+    </div>
 </div>
+</section> -->
+<main *ngIf="datas">
+    <button [disabled]="!form.valid" (click)="sendOrder()">Send Order</button>
+    <section *ngFor="let cat of datas">
+      <h2>{{cat.title}}</h2>
+      <ul>
+        <li *ngFor="let recipe of cat.recipes" (click)="addRecipe(recipe)">
+          <img *ngIf="recipe.imageUrl; else displayPlaceholderImg" [src]="recipe.imageUrl" alt="{{recipe.title}}" />
+          <ng-template #displayPlaceholderImg>
+            <span class="placeholderImg"></span>
+          </ng-template>
+          {{recipe.title}}
+        </li>
+      </ul>
+    </section>
+  </main>
