--- a/src/app/resto/containers/kitchen/kitchen.component.html
+++ b/src/app/resto/containers/kitchen/kitchen.component.html
@@ -1,1 +1,10 @@
-<p>kitchen works!</p>
+<section *ngFor="let order of orders; let i = index">
+    Order n°{{i}}
+    <ul *ngFor="let recipe of orders.data">
+        <li>
+            {{recipe.title}}
+        <button (click)="updateStatus(order,'pending')">Update Status</button>
+        <button (click)="updateStatus(order,'ready')">ready</button>
+        </li>
+    </ul>
+</section>>
