--- a/src/app/resto/containers/order-page/order-page.component.html
+++ b/src/app/resto/containers/order-page/order-page.component.html
@@ -1,50 +1,29 @@
-<!-- <div class="container mt-4 mb-4">
-    <h1 class="text-center">Customers <span class="highlight">Favourites Food</span></h1>
-    <div class="row">
-        <div class="col-lg-3 mt-3" *ngFor="let data of datas">
-            <div class="foodbox">
-                <h1>{{data.title}}</h1>
-                <p>{{data.title}}</p>
-                <div class="box-container" *ngFor="let recipe of data.recipes">
-                    <div class="box">
-                        <span class="price">{{recipe.price}}</span>
-                        <img src="{{recipe.imageUrl}}" class=""alt="">
-                        <h3>{{recipe.title}}</h3>
-                    </div>
-                    <a href="#" class="btn">Order Now</a>
-                </div>
-        </div>
-    </div>
-</div> -->
-
-<!-- <section class="categories" id="categories ">
-    <div class="box-container" *ngFor="let data of datas">
-        <div class="box">
-            <h1>{{data.title}}</h1>
-            <div class="box" *ngFor="let recipe of data.recipes">
-                <div class="box">
-                    <span class="price">{{recipe.price}}</span>
-                    <img src="{{recipe.imageUrl}}" class=""alt="">
-                    <h3>{{recipe.title}}</h3>
-                    <a href="#" class="btn">Ajouter</a>
-                </div>
-                
-            </div>
-    </div>
-</div>
-</section> -->
-<main *ngIf="datas">
-    <button [disabled]="!form.valid" (click)="sendOrder()">Send Order</button>
-    <section *ngFor="let cat of datas">
-      <h2>{{cat.title}}</h2>
-      <ul>
-        <li *ngFor="let recipe of cat.recipes" (click)="addRecipe(recipe)">
-          <img *ngIf="recipe.imageUrl; else displayPlaceholderImg" [src]="recipe.imageUrl" alt="{{recipe.title}}" />
-          <ng-template #displayPlaceholderImg>
-            <span class="placeholderImg"></span>
-          </ng-template>
-          {{recipe.title}}
-        </li>
-      </ul>
-    </section>
-  </main>
+<ion-content>
+    <ion-grid *ngIf="datas">
+        <ion-button [disabled]="!form.valid" (click)="sendOrder()">Send Order</ion-button>
+        <ion-card *ngFor="let cat of datas">
+          <ion-card-subtitle>{{cat.title}}</ion-card-subtitle>
+          <ion-row>
+            <ion-col *ngFor="let recipe of cat.recipes" (cion-colck)="addRecipe(recipe)">
+              <ion-img *ngIf="recipe.imageUrl; else displayPlaceholderImg" [src]="recipe.imageUrl" alt="{{recipe.title}}"></ion-img>
+              <ng-template #displayPlaceholderImg>
+                <ion-thumbnail class="placeholderImg"></ion-thumbnail>
+              </ng-template>
+              <ion-card-title>{{recipe.title}}</ion-card-title>
+              <ion-card>
+                <ion-item>
+                  <ion-icon name="pin" slot="start"></ion-icon>
+                  <ion-label>{{recipe.price}}</ion-label>
+                  <ion-button fill="outline" slot="end">View</ion-button>
+                </ion-item>
+              
+                <ion-card-content>
+                 {{recipe.description}}
+                </ion-card-content>
+              </ion-card>
+            </ion-col>
+          </ion-row>
+        </ion-card>
+      </ion-grid>
+     
+</ion-content>
